--- a/Mp3/Mp3.csproj
+++ b/Mp3/Mp3.csproj
@@ -35,6 +35,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AxInterop.WMPLib">
+      <HintPath>..\..\..\..\Documents\Uno\Uno\obj\Debug\AxInterop.WMPLib.dll</HintPath>
+    </Reference>
+    <Reference Include="Interop.WMPLib">
+      <HintPath>..\..\..\..\Documents\Uno\Uno\obj\Debug\Interop.WMPLib.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -93,6 +100,36 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="NAudio">
+      <Version>1.10.0</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Ressource\Label.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Ressource\btnPlay.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Ressource\btnPause.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Ressource\BtnMute.png" />
+    <Resource Include="Ressource\btnSound.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Ressource\btnLoopa.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Ressource\btnLoopb.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Ressource\btnNext.png" />
+    <Resource Include="Ressource\btnPrevious.png" />
+    <Resource Include="Ressource\btnRandoma.png" />
+    <Resource Include="Ressource\btnRandomb.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
