--- a/Mp3/Mp3.csproj
+++ b/Mp3/Mp3.csproj
@@ -105,6 +105,9 @@
     <PackageReference Include="NAudio">
       <Version>1.10.0</Version>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Ressource\Label.png" />
@@ -130,6 +133,12 @@
     <Resource Include="Ressource\btnPrevious.png" />
     <Resource Include="Ressource\btnRandoma.png" />
     <Resource Include="Ressource\btnRandomb.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Ressource\IconSearch.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Ressource\BtnCancel.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
